2007-06-11  Inge Wallin  <inge@lysator.liu.se>

	More float to double changes, taking it step by step.
	* src/lib/tilescissor.cpp:       float -> double
	* src/lib/texcolorizer.cpp:      float -> double
	* src/lib/TextureTile.cpp:       float -> double

	More float to double changes, taking it step by step.
	* src/lib/GridMap.{h,cpp}:       float -> double
	* src/lib/TextureMapper.{h,cpp}: float -> double

	More float to double changes, taking it step by step.
	* src/lib/MarbleModel.{h,cpp}:   float -> double
	* src/lib/MarbleWidget.{h,cpp}:  float -> double

	Change float to double to increase precision.
	* src/lib/Quaternion.{h,cpp}: float -> double
	* src/lib/GeoPoint.{h,cpp}:   float -> double
	* src/lib/GeoPolygon.{h,cpp}: float -> double
	* src/lib/MarbleWidget.{h,cpp},  src/lib/TextureMapper.cpp
	src/lib/katlasviewinputhandler.{h,cpp},
	src/lib/katlasviewpopupmenu.cpp, src/lib/measuretool.cpp,
	src/lib/placemark.{h,cpp},       src/lib/placemarkmanager.cpp
	src/main.cpp: Just change the floats that needed to be changed.	
	
2007-06-11  Torsten Rahn  <rahn@kde.org>

	* src/lib/tilescissor.{h,cpp}: code changes to introduce
	an additional standalone command line tool to create tiles.

2007-06-10  Inge Wallin  <inge@lysator.liu.se>

	Krazy fix for apidox
	* src/lib/MarbleWidget.h (MarbleWidget): Fix apidox: unknown parameter

	Clean up
	* src/lib/clippainter.{h,cpp}: use the m_ convention everywhere.

	Clean up
	* src/lib/vectormap.{h,cpp}: use the m_ convention everywhere.

	Minor cleaning while learning the code
	* src/lib/vectormap.cpp, placemark.h, placemarkpainter.cpp,
	vectorcomposer.cpp, MarbleModel.cpp: minor comments and cleaning

2007-06-09  Torsten Rahn  <rahn@kde.org>

	* src/katlascontrol.{h,cpp}: Introduce QSplitter

2007-06-07  Inge Wallin  <ingwa@shihonage.lkpg.cendio.se>

	Introduce d-pointer in MarbleWidget
	* src/lib/MarbleWidget.cpp (d): new member
	* src/lib/MarbleWidget.cpp (MarbleWidgetPrivate): new class